# graph

./: .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PRODUCT.md  README.md  SECURITY.md  pyproject.toml
.agent-memory/: CLAUDE.md  architecture.md  repo.md
.agent-memory/changes/: hotspots.md  recent.md
.agent-memory/features/: benchmark.md  blastradius.md  cache.md  cli.md  core.md  cursorresolver.md  extension.md  graph.md  models.md  search.md  watcher.md
.agent-memory/metadata/: confidence.json  freshness.json  manifest.json  pack_cache.json  sources.json
.agent-memory/modules/: code_review_graph-memory.md  code_review_graph.md
.agent-memory/rules/: conventions.md  safe-boundaries.md
.claude-plugin/: marketplace.json  plugin.json
benchmarks/: README.md  release_gate.md  run_benchmark.py  scorecard_template.md
benchmarks/results/: graph-2026-03-27.json  graph-20260325T163857Z.json  graph-20260325T163906Z.json  graph-20260325T164105Z.json  graph-20260325T180207Z.json  graph-20260325T181735Z.json  graph-20260326T202730Z.json  graph-manual-2026-03-27.md
benchmarks/tasks/: flat_package_tasks.json  messy_repo_tasks.json  public_repo_tasks.json  sample_tasks.json
code-review-graph-vscode/: README.md  package.json
code-review-graph-vscode/media/walkthrough/: build.md  install.md
code_review_graph/: cli.py  incremental.py  main.py  tools.py
code_review_graph/memory/: __init__.py  classifier.py  commands.py  context_builder.py  flat_rescue.py  generator.py  graph_bridge.py  hooks.py  lookup.py  metadata.py  models.py  overrides.py  pack_cache.py  refresh.py  scanner.py  signal_cache.py  telemetry.py  writer.py
docs/: AUDIT-2026-03-25.md  COMMANDS.md  FEATURES.md  INDEX.md  LEGAL.md  LLM-OPTIMIZED-REFERENCE.md  MEMORY.md  ROADMAP-2026-04.md  ROADMAP.md  TROUBLESHOOTING.md  USAGE.md  architecture.md  product-audit-2026-03-25.md  repo-memory-demo.md  repo-memory-v1.md  tickets-phase2.md
docs/superpowers/specs/: 2026-03-16-vscode-extension-design.md
hooks/: hooks.json  prompt-context.sh
skills/build-graph/: SKILL.md
tests/: test_benchmark_harness.py  test_incremental.py  test_memory_changed_graph.py  test_memory_classifier.py  test_memory_classifier_graph.py  test_memory_cli.py  test_memory_context_builder.py  test_memory_context_builder_semantic.py  test_memory_explain_graph.py  test_memory_flat_rescue.py  test_memory_generator.py  test_memory_generator_vocab.py  test_memory_graph_bridge.py  test_memory_hooks.py  test_memory_imports.py  test_memory_integration.py  test_memory_lookup.py  test_memory_lookup_semantic.py  test_memory_overrides.py  test_memory_pack_cache.py  test_memory_phase4_graph_leverage.py  test_memory_phase5_perf_ux.py  test_memory_quality_verdict.py  test_memory_refresh.py  test_memory_refresh_graph.py  test_memory_scanner.py  test_memory_scanner_shape.py  test_memory_tools.py  test_memory_writer.py
